--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -68,6 +68,16 @@
             margin-bottom: 0;
         }
 
+        .essay caption {
+          font-size: 18px;
+          color: #AE3179;
+          text-align: center;
+          margin-top: 0;
+          margin-bottom: 0;
+          font-style: italic;
+          line-height: 1.5;
+        }
+
         .essay p {
             font-size: 18px;
             color: #AE3179;
@@ -133,6 +143,20 @@
             margin-top: 0;
             margin-bottom: 0;
         }
+        .images {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-top: 15px;
+            width: 1080px;
+        }
+
+        .images img {
+            height: calc((1080px - 15px * (var(--n) - 1)) / var(--n)); /* Max possible height */
+            width: auto; /* Maintain aspect ratio */
+            object-fit: cover;
+        }
+
     </style>
 </head>
 <body>
@@ -171,13 +195,29 @@
         <p class="indent">
             When done by immigrants, poor people, drug users, and political radicals, though, the transformation of urban space to one's ends is often not sanctioned by the state. To the people of the East Village, Tompkins Square Park was a garden where one could cultivate, a bazaar where one could buy and sell, a home and town where one could live, a community center where one could discuss, a concert hall where one could play, sing, dance, listen, and enjoy. To the state and those who aligned themselves with its authority, it was public property on which such disorderly activity was criminal. Thus, a fundamental contest arose: between the communities built around the act of using and transforming urban space to their end, whose life was defined by this labor, and a political authority whose systems of rights and property could only apprehend that labor as criminal. What were the narratives on the side of power that defined the contest for this space? What can we extrapolate about systems of power from them? And, on a more human level – though perhaps I indulge in a romantic notion to say that everyday life speaks more to humanity than (human) systems of power – what were the subaltern narratives<sup>2</sup> around how life was lived in this space?
         </p>
+      </div>
+
+      <div class="images" style="--n:2;">
+        <img src="1.1_ladybird.jpg" alt="Ladybird 1">
+        <img src="1.2_ladybird.jpg" alt="Ladybird 2">
+      </div>
+
+      <div class="images" style="--n:2;">
+        <img src="2.1_st_marks.jpg" alt="St Marks">
+        <img src="2.2_physical_graffitea.jpg" alt="Physical Graffitea">
+      </div>
+
+      <div class="essay", style="margin-top:20px; margin-bottom:40px">
+        <caption>
+              ^ the vibes on st marks, 2024.
+        </caption>
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
             <sup>1</sup>  Today, the Lower East Side (LES) is often thought to have its northern border at Houston St and the East Village above it is between Houston St and 14 St. Earlier references to the LES, though, include Alphabet City (which is a part of the East Village east of Tompkins) and Tompkins itself, which are both north of Houston St. In other words, any part of Manhattan south of 14th and east of Broadway (more or less) used to be considered part of the LES. This is why the Nuyorican reinterpretation of the LES (Loisaida) doesn’t actually include the area most commonly referred to as the LES today. Alphabet City, which was historically primarily Latino/a dating back to the ‘70s, was seen as part of the LES back then, but this changed because of the distinct neighborhood identities north and south of Houston (between the contemporary LES and the East Village) from the ‘70s onwards. As late as the ‘80s and ‘90s though, East Village squats are referred to as being in the LES, so this paper will at times use this older sense of the term to situate itself in the vocabulary of the time to which it refers (Nieves, B6; McCarthy, C8).
         </p>
         <p>
-            <sup>2</sup> Note that I didn’t ask, simply, “how was life lived in this space?” I don’t know, I didn’t live it. Still, I said in the title that this was an elegy. Why, in an elegy, you might ask, would you forsake yourself to this meta-layer of academic analysis of “narratives on” and “narratives around”? Why remove yourself from the real and visceral life lived at Tompkins by abstracting it into a set of paradigms, of relationships between this idea of power and this idea of subaltern life? Doesn’t that remove the level of intimacy that an elegy should have? I may not have been there in the ‘80s, but maybe I could not just bring together and show art, music, stories, and people from that time and let them speak for themselves. Maybe I could write a story or a poem, or draw a portrait, or paint some non-figurative interpretation, or make a comic or a zine, or pick any artistic approach that has the humility and tender touch to engage with and mourn the loss of the life lived there. Maybe I will. But why pick an approach that presumes to know in the way that this one does? Though I hope this is less of an exercise in presuming to know and more of an exercise in working with useful heuristics to make sense of, my reason for this is a way of avoiding falling into romanticizing the Tompkins of the ‘80s too much. It was a place of creation, of art, of community, of new ways of life; it was a place of homelessness, hard drug use, poverty, and human suffering. That is hard to confront. Maybe I could stare that in the eye with a more artistic approach, but that is why I think there is value in moving into this realm of what it all meant to people – a realm that, when put that way, is not at all foreign to the elegy, and a realm blesses us with a critical approach to understanding our lives in relation with systems of power that is a useful tool for political organizing and (on its best day, perhaps) points to the beauty of life in the way that any elegy should. 
+            <sup>2</sup> Note that I didn’t ask, simply, “how was life lived in this space?” I don’t know, I didn’t live it. Still, I said in the title that this was an elegy. Why, in an elegy, you might ask, would you forsake yourself to this meta-layer of academic analysis of “narratives on” and “narratives around”? Why remove yourself from the real and visceral life lived at Tompkins by abstracting it into a set of paradigms, of relationships between this idea of power and this idea of subaltern life? Doesn’t that remove the level of intimacy that an elegy should have? I may not have been there in the ‘80s, but maybe I could not just bring together and show art, music, stories, and people from that time and let them speak for themselves. Maybe I could write a story or a poem, or draw a portrait, or paint some non-figurative interpretation, or make a comic or a zine, or pick any artistic approach that has the humility and tender touch to engage with and mourn the loss of the life lived there. Maybe I will. But why pick an approach that presumes to know in the way that this one does? Though I hope this is less of an exercise in presuming to know and more of an exercise in working with useful heuristics to make sense of, my reason for this is a way of avoiding falling into romanticizing the Tompkins of the ‘80s too much. It was a place of creation, of art, of community, of new ways of life; it was a place of homelessness, hard drug use, poverty, and human suffering. That is hard to confront. Maybe I could stare that in the eye with a more artistic approach, but that is why I think there is value in moving into this realm of what it all meant to people – a realm that, when put that way, is not at all foreign to the elegy, and a realm blesses us with a critical approach to understanding our lives in relation with systems of power that is a useful tool for political organizing and (on its best day, perhaps) points to the beauty of life in the way that any elegy should.
         </p>
     </div>
 
