--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -197,17 +197,33 @@
         </p>
       </div>
 
-      <div class="images" style="--n:2;">
-        <img src="1.1_ladybird.jpg" alt="Ladybird 1">
-        <img src="1.2_ladybird.jpg" alt="Ladybird 2">
-      </div>
+      <div class="images">
+        <style="--n:2;">
+          <img src="1.1_ladybird.JPG" alt="ladybird 1">
+          <img src="1.2_ladybird.JPG" alt="ladybird 2">
+        </style>
+        <style="--n:2;">
+          <img src="2.1_st_marks.JPG" alt="st marks">
+          <img src="2.2_physical_graffitea.JPG" alt="physical graffitea">
+        </style>
+        <style="--n:2;">
+          <img src="2.3_mangomango_search&destroy.JPG" alt="mangomango">
+        </style>
+        <style="--n:2;">
+          <img src="3.1_poetica_coffee.JPG" alt="poetica coffee">
+          <img src="3.2_search&destroy.JPG" alt="search&destroy">
+        </style="">
+        <style="--n:2;">
+          <img src="4.1_search&destroy.JPG" alt="search&destroy">
+          <img src="4.2_romeo's.JPG" alt="romeo's">
+        </style>
+        <style="--n:2;">
+          <img src="5.1_fancy_sushi.JPG" alt="sushi">
+          <img src="5.2_st_marks.JPG" alt="st marks">
+        </style>
+      </div
 
-      <div class="images" style="--n:2;">
-        <img src="2.1_st_marks.jpg" alt="St Marks">
-        <img src="2.2_physical_graffitea.jpg" alt="Physical Graffitea">
-      </div>
-
-      <div class="essay", style="margin-top:20px; margin-bottom:40px">
+      <div class="essay", style="margin-top:20px; margin-bottom:20px">
         <caption>
               ^ the vibes on st marks, 2024.
         </caption>
