--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -68,15 +68,16 @@
             margin-bottom: 0;
         }
 
-        .essay caption {
-          font-size: 18px;
-          color: #AE3179;
-          text-align: center;
-          margin-top: 0;
-          margin-bottom: 0;
-          font-style: italic;
-          line-height: 1.5;
+        .essay .caption {
+            font-size: 18px;
+            color: #AE3179;
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 0;
+            font-style: italic;
+            line-height: 1.5;
         }
+
 
         .essay p {
             font-size: 18px;
@@ -221,9 +222,10 @@
           <img src="5.2_st_marks.JPG" alt="st marks">
       </div>
 
-      <div class="essay caption">
-          <p> This is an example of a caption with the given styles.</p>
+      <div class="essay">
+          <p class="caption">This is an example of a caption with the given styles.</p>
       </div>
+
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
