--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -150,13 +150,14 @@
               justify-content: center;
               gap: 15px;
               max-width: 1080px;
-              width: 100%; /* Ensure the container fills the available space */
+              width: 100%;
+              margin-bottom: 20px; /* Adds 20px vertical margin below the image container */
           }
 
           .image-container img {
               width: auto;
-              height: 100%; /* Makes sure the images take up the full available height */
-              max-width: 100%; /* Prevents images from overflowing horizontally */
+              height: 100%;
+              max-width: 100%;
               object-fit: contain;
           }
     </style>
