'80s and '90s tompkins upload

--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -180,7 +180,7 @@
             On August 6th, 1988, the New York City Police Department incited (New York Times Editorial Board) a riot at Tompkins Square Park in Manhattan’s East Village against groups of “drug pushers, homeless people, and young people known as squatter and punks” protesting a park curfew and gentrification (Perez-Rivas).
         </p>
         <p class="indent">
-            One block west of that site today, at Ladybird, “a vegetable bar” you can, according to their website: “Eat, Drink, Start a Revolution.” There, a 12 ounce beer goes for $10, a cocktail for $15 to $18, a single dumpling-sized bun for $8, the cheapest dessert – the “Brûlée” for $15 (“Ladybird”). North one block is St Mark’s place, where bars at a similar price-point are interspersed with pop-up peddlers’ stands selling vinyl at as low as $2 an album to the sharp haggler; where upscale teas from around the world can be purchased at Physical Graffitea: a cafe with a floral, wooded, low-lit aesthetic. Nearby, a shop exclusively selling small servings of Hong Kongese mango desserts in artisanal ceramics could be placed in frame with facade decorated by a mass of the disembodied remains of baby dolls and graffiti art reading slogans like “EAT COCK FUCK COPS.” Just east of all of this is Tompkins Square Park. Today, Elm trees rise above a playground teeming with the laughter of young children and a dog area with a zen garden-like crushed stone ground, and several green lawns. Occasional punk shows are held there; the audiences tend to be in their forties or older. While some of the businesses farther east echo the aesthetic inclinations of their counterparts west of Tompkins, the area (known as Alphabet City, since the Avenues are named with letters rather than number names like in the rest of New York) is more residential. Charming brownstones (a cursory sort by price search on Zillow reveals the cheapest of studios go for $2,100 per month) are interspersed with relics of the neighborhood’s Puerto Rican (or, Nuyorican) heritage: little community gardens with Spanish names (like Pancho Ramos and La Plaza) pepper the blocks around Avenue B and Avenue C, harboring flora from weeping willows to roses to squash. Avenue C is also known as Loisaida avenue, a Spanglish reimagination of “Lower East Side"<sup>1</sup> coined by Bittman “Bimbo” Rivas in a 1974 poem (McCarthy; Rivas). The neighborhood’s vibrant city-sanctioned mural art commemorates community leaders of the ‘70s through the ‘90s. Walking through the East Village in 2024, though, the paint on the walls that strikes me the most is a motif in the graffiti: plain, unstyled text that reads “My keys don’t fit these locks No More.”
+            One block west of that site today, at Ladybird, “a vegetable bar” you can, according to their website: “Eat, Drink, Start a Revolution.” There, a 12 ounce beer goes for $10, a cocktail for $15 to $18, a single dumpling-sized bun for $8, the cheapest dessert – the “Brûlée” for $15 (“Ladybird”). North one block is St Mark’s place, where bars at a similar price-point are interspersed with pop-up peddlers’ stands selling vinyl at as low as $2 an album to the sharp haggler; where upscale teas from around the world can be purchased at Physical Graffitea: a cafe with a floral, wooded, low-lit aesthetic. Nearby, a shop exclusively selling small servings of Hong Kongese mango desserts in artisanal ceramics could be placed in frame with facade decorated by a mass of the disembodied remains of baby dolls and graffiti art reading slogans like “EAT COCK FUCK COPS.” Just east of all of this is Tompkins Square Park. Today, Elm trees rise above a playground teeming with the laughter of young children and a dog area with a zen garden-like crushed stone ground, and several green lawns. Occasional punk shows are held there; the audiences tend to be in their forties or older. While some of the businesses farther east echo the aesthetic inclinations of their counterparts west of Tompkins, the area (known as Alphabet City, since the Avenues are named with letters rather than New York's usual numbered names) is more residential. Charming brownstones (a cursory sort by price search on Zillow reveals the cheapest of studios go for $2,100 per month) are interspersed with relics of the neighborhood’s Puerto Rican (or, Nuyorican) heritage: little community gardens with Spanish names (like Pancho Ramos and La Plaza) pepper the blocks around Avenue B and Avenue C, harboring flora from weeping willows to roses to squash. Avenue C is also known as Loisaida avenue, a Spanglish reimagination of “Lower East Side"<sup>1</sup> coined by Bittman “Bimbo” Rivas in a 1974 poem (McCarthy; Rivas). The neighborhood’s vibrant city-sanctioned mural art commemorates community leaders of the ‘70s through the ‘90s. Walking through the East Village in 2024, though, the paint on the walls that strikes me the most is a motif in the graffiti: plain, unstyled text that reads “My keys don’t fit these locks No More.”
         </p>
         <p class="indent">
             In the ‘80s, the East Village was a very different place: in the words of Tony Magia – founder of <span class="italic">The Other Paper</span>, a twice-monthly hyperlocal paper on news east of Broadway and South of 14th Street – the East Village was a place of:
@@ -228,6 +228,21 @@
           <p class="caption">^ the vibes on st marks place, 2024</p>
       </div>
 
+      <div class="image-container">
+            <img src="6.1_oldtompkins.jpg" alt="tompkins">
+      </div>
+      <div class="image-container">
+            <img src="7.1_oldtompkins.webp" alt="tompkins">
+            <img src="7.2_oldtompkins.webp" alt="tompkins">
+      </div>
+      <div class="image-container">
+            <img src="8.1_oldtompkins.webp" alt="tompkins">
+            <img src="8.2_oldtompkins.webp" alt="tompkins">
+      </div>
+
+      <div class="essay">
+          <p class="caption">^ the vibes at tompkins in the late '80s and early '90s</p>
+      </div>
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
