--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -223,7 +223,6 @@
               <img src="5.1_fancy_sushi.JPG" alt="sushi">
               <img src="5.2_st_marks.JPG" alt="st marks">
         </div>
-
       <div class="essay">
           <p class="caption">^ the vibes on st marks place, 2024</p>
       </div>
@@ -239,10 +238,25 @@
             <img src="8.1_oldtompkins.webp" alt="tompkins">
             <img src="8.2_oldtompkins.webp" alt="tompkins">
       </div>
-
       <div class="essay">
           <p class="caption">^ the vibes at tompkins in the late '80s and early '90s</p>
       </div>
+
+      <div class="image-container">
+            <img src="9.1_tompkins.JPG" alt="tompkins">
+            <img src="9.2_tompkins.JPG" alt="tompkins">
+      </div>
+      <div class="image-container">
+            <img src="10.1_tompkins.JPG" alt="tompkins">
+            <img src="10.2_tompkins.JPG" alt="tompkins">
+      </div>
+      <div class="image-container">
+            <img src="11.1_tompkins.JPG" alt="tompkins">
+      </div>
+      <div class="essay">
+          <p class="caption">^ the vibes at tompkins in 2024</p>
+      </div>
+
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
