--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -223,7 +223,7 @@
               <img src="5.1_fancy_sushi.JPG" alt="sushi">
               <img src="5.2_st_marks.JPG" alt="st marks">
         </div>
-      <div class="essay">
+      <div class="essay", style="margin-bottom: 60px;">
           <p class="caption">^ the vibes on st marks place, 2024</p>
       </div>
 
@@ -238,7 +238,7 @@
             <img src="8.1_oldtompkins.webp" alt="tompkins">
             <img src="8.2_oldtompkins.webp" alt="tompkins">
       </div>
-      <div class="essay">
+      <div class="essay" style="margin-bottom: 60px;">
           <p class="caption">^ the vibes at tompkins in the late '80s and early '90s</p>
       </div>
 
@@ -253,7 +253,7 @@
       <div class="image-container">
             <img src="11.1_tompkins.JPG" alt="tompkins">
       </div>
-      <div class="essay">
+      <div class="essay" style="margin-bottom: 60px;">
           <p class="caption">^ the vibes at tompkins in 2024</p>
       </div>
 
@@ -271,7 +271,7 @@
     <div class="essay">
         <p class="bold">Bibliography</p>
     </div>
-    <div class="essay", style="margin-bottom:100px">
+    <div class="essay" style="margin-bottom:100px">
     <div class="essay">
         <p class="bibliography">
             xx
