--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -201,8 +201,8 @@
       </div>
 
         <div class="image-container">
-            <img src="1.1_ladybird.JPG" alt="ladybird">
-            <img src="1.2_ladybird.JPG" alt="ladybird">
+            <img src="1.1_ladybird.jpg" alt="ladybird">
+            <img src="1.2_ladybird.jpg" alt="ladybird">
         </div>
         <div class="image-container">
             <img src="2.1_st_marks.JPG" alt="st marks">
