--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -257,6 +257,26 @@
           <p class="caption">^ the vibes at tompkins in 2024</p>
       </div>
 
+      <div class="image-container">
+            <img src="12.1_loisaida.jpg" alt="loisaida">
+            <img src="12.2_tompkins.JPG" alt="loisaida">
+      </div>
+      <div class="image-container">
+            <img src="13.1_loisaida.jpg" alt="loisaida">
+            <img src="13.2_loisaida.jpg" alt="loisaida">
+      </div>
+      <div class="image-container">
+            <img src="14.1_loisaida.jpg" alt="loisaida">
+            <img src="14.2_loisaida.jpg" alt="loisaida">
+      </div>
+      <div class="image-container">
+            <img src="15.1_loisaida.jpg" alt="loisaida">
+            <img src="15.2_loisaida.jpg" alt="loisaida">
+            <img src="15.3_loisaida.jpg" alt="loisaida">
+      </div>
+      <div class="essay" style="margin-bottom: 60px;">
+          <p class="caption">^ the vibes in loisaida, 2024</p>
+      </div>
 
     <div class="essay", style="margin-top:50px; margin-bottom:80px">
         <p>
