attempted ladybird image fix

--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -201,9 +201,9 @@
       </div>
 
         <div class="image-container">
-            <img src="1.1_ladybird.jpg" alt="ladybird">
-            <img src="1.2_ladybird.jpg" alt="ladybird">
-        </div>
+            <img src="https://kovid-pal-odouard.github.io/thevillage-2024/tompkins_elegy/1.1_ladybird.jpg" alt="ladybird">
+            <img src="https://kovid-pal-odouard.github.io/thevillage-2024/tompkins_elegy/1.2_ladybird.jpg" alt="ladybird">
+        </div
         <div class="image-container">
             <img src="2.1_st_marks.JPG" alt="st marks">
             <img src="2.2_physical_graffitea.JPG" alt="physical graffitea">
