two more images

--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -274,6 +274,10 @@
             <img src="15.2_loisaida.jpg" alt="loisaida">
             <img src="15.3_loisaida.jpg" alt="loisaida">
       </div>
+      <div class="image-container">
+            <img src="16.1_loisaida.jpg" alt="loisaida">
+            <img src="16.2_loisaida.jpg" alt="loisaida">
+      </div>
       <div class="essay" style="margin-bottom: 60px;">
           <p class="caption">^ the vibes in loisaida, 2024</p>
       </div>
