--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -259,7 +259,7 @@
 
       <div class="image-container">
             <img src="12.1_loisaida.jpg" alt="loisaida">
-            <img src="12.2_tompkins.JPG" alt="loisaida">
+            <img src="12.2_loisaida.JPG" alt="loisaida">
       </div>
       <div class="image-container">
             <img src="13.1_loisaida.jpg" alt="loisaida">
