--- a/thevillage-2024/tompkins_elegy/index.html
+++ b/thevillage-2024/tompkins_elegy/index.html
@@ -163,6 +163,7 @@
 </head>
 <body>
     <div class="heading-text" style="margin-bottom: 60px;">
+        ##8:35 pm upload##
         <h1>STUFF I MADE IN THE VILLAGE, NY ~ 2024</h1>
         <p>by <a href="https://kovid-pal-odouard.github.io" class="link-element">Kovid Pal Odouard</a>!</p>
     </div>
@@ -274,8 +275,8 @@
             <img src="15.3_loisaida.jpg" alt="loisaida">
       </div>
       <div class="image-container">
-            <img src="16.1_loisaida.jpg" alt="loisaida">
-            <img src="16.2_loisaida.jpg" alt="loisaida">
+            <img src="16.1_loisaida.JPG" alt="loisaida">
+            <img src="16.2_loisaida.JPG" alt="loisaida">
       </div>
       <div class="essay" style="margin-bottom: 60px;">
           <p class="caption">^ the vibes in loisaida, 2024</p>
